--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/elements": "^1.3.18",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "blurhash": "^2.0.5",
     "expo": "~48.0.18",
+    "expo-blur": "~12.2.2",
+    "expo-brightness": "~11.2.1",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-screen-orientation": "^5.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
